# askthymonk

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py  safety.py
backend/app/services/: __init__.py  embeddings.py  llm.py  pinecone_client.py
backend/tests/: test_api.py  test_fallback.py  test_safety.py
mobile/: .env.example  App.tsx  app.json  eas.json  package-lock.json  package.json
mobile/src/: api.ts  config.ts  format.ts  i18n.ts  preferences.ts  types.ts
mobile/src/components/: ChatInput.tsx  Drawer.tsx  Header.tsx  LanguageToggle.tsx  MessageBubble.tsx  MessageList.tsx  Welcome.tsx
mobile/src/voice/: useSpeechToText.ts
