[project]
name = "zen-wisdom-backend"
version = "1.0.0"
description = "RAG chat backend (FastAPI) over a Pinecone index of Hindi Osho books."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.40",
    "pinecone>=5.0",
    "python-dotenv>=1.0",
    "slowapi>=0.1.9",
    "pydantic>=2.7",
]

[tool.uv]
package = false
